# scitex-audit

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cla.yml  docs.yml  publish-pypi.yml  test.yml
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: audit.rst
examples/: quickstart.py
src/scitex_audit/: __init__.py  _bandit.py  _format.py  _github.py  _pip_audit.py  _runner.py  _shellcheck.py
src/scitex_audit/_skills/: SKILL.md  audit.md  security-scanning.md
src/scitex_audit/_skills/scitex-audit/: 01_quick-start.md  02_python-api.md  03_checkers.md  10_cli-reference.md  SKILL.md
src/scitex_audit/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
src/scitex_audit/_sphinx_html/.doctrees/: environment.pickle  index.doctree  installation.doctree
src/scitex_audit/_sphinx_html/.doctrees/api/: audit.doctree
src/scitex_audit/_sphinx_html/_sources/: installation.rst.txt
src/scitex_audit/_sphinx_html/api/: audit.html
tests/examples/: test_quickstart.py
tests/scitex_audit/: test__format.py
