[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-audit"
version = "0.1.0"
description = "Security audit orchestrator (bandit, shellcheck, pip-audit, GitHub alerts)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.optional-dependencies]
all = [
    "bandit",
    "pip-audit",
    "click",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-audit"
Repository = "https://github.com/ywatanabe1989/scitex-audit"
