[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-audit"
version = "0.1.0"
description = "Unified security scanning by orchestrating bandit, shellcheck, pip-audit, and GitHub alerts"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.optional-dependencies]
all = [
    "bandit",
    "pip-audit",
    "click",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-audit"
Repository = "https://github.com/ywatanabe1989/scitex-audit"

[project.entry-points."scitex_dev.docs"]
scitex-audit = "scitex_audit"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
