[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-audit"
version = "0.1.2"
description = "Unified security scanning by orchestrating bandit, shellcheck, pip-audit, and GitHub alerts"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-audit[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-audit"
Repository = "https://github.com/ywatanabe1989/scitex-audit"
Issues = "https://github.com/ywatanabe1989/scitex-audit/issues"

[project.entry-points."scitex_dev.docs"]
scitex-audit = "scitex_audit"

[project.entry-points."scitex_dev.skills"]
scitex-audit = "scitex_audit"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
